--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div class="container" id="container"></div>
-    <script src="index.js"></script>
+    <script src="index copy.js"></script>
   </body>
 </html>
