--- a/mercury.html
+++ b/mercury.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mercury</title>
+    <link rel="stylesheet" href="/css/planetstyle.css" />
+    <link rel="shortcut icon" href="#" />
   </head>
   <body>
-    <h1>Ibrahim Gay</h1>
+    <div class="wrapper">
+      <div class="header" id="header">
+        <h1>Merkurius</h1>
+        <h1>Vet ej?</h1>
+      </div>
+      <div class="container" id="container"></div>
+      <div class="footer"></div>
+    </div>
+    <script src="/js/planeter.js"></script>
   </body>
 </html>
