--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div class="container" id="container"></div>
-    <script src="/js/index copy.js"></script>
+    <script src="/js/index.js"></script>
   </body>
 </html>
