--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div class="container" id="container"></div>
-    <script src="index.js" type="text/javascript"></script>
+    <script src="/blob/master/js/index.js" type="text/javascript"></script>
   </body>
 </html>
