Changed names and made individual html file progress

--- a/merkurius.html
+++ b/merkurius.html
@@ -11,11 +11,18 @@
   <body>
     <div class="wrapper">
       <div class="header" id="header">
-        <h1>Merkurius</h1>
-        <h1>Vet ej?</h1>
+        <a href="index.html">
+          <h1>&#60;&#60; Start</h1>
+        </a>
       </div>
-      <div class="container" id="container"></div>
-      <div class="footer"></div>
+      <aside class="sidebar"></aside>
+      <div class="container" id="container">
+        <div class="text"></div>
+      </div>
+      <div class="footer">
+        <p>© Klas Wong-In Andersson, 2023</p>
+        <p>Skapat som ett skolprojekt vt-2023</p>
+      </div>
     </div>
     <script src="/js/planeter.js"></script>
   </body>
