Fixade alla individuella html platser

--- a/mars.html
+++ b/mars.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Merkurius</title>
+    <title>Mars</title>
     <link rel="stylesheet" href="/css/planetstyle.css" />
     <link rel="shortcut icon" href="#" />
   </head>
@@ -20,11 +20,10 @@
         <div class="text">
           <ul id="list">
             <li class="listitem">
-              Merkurius är den minsta planeten i solsystemet.
+              Mars kallas också "den röda planeten" på grund av sin färg.
             </li>
             <li class="listitem">
-              Den snurrar runt solen jättesnabbt, så en dag på Merkurius är bara
-              59 jorddagar lång!
+              Det finns berg och dalar på Mars som är ännu större än på jorden!
             </li>
           </ul>
         </div>
