--- a/saturnus.html
+++ b/saturnus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Merkurius</title>
+    <title>Saturnus</title>
     <link rel="stylesheet" href="/css/planetstyle.css" />
     <link rel="shortcut icon" href="#" />
   </head>
@@ -19,12 +19,9 @@
       <div class="container" id="container">
         <div class="text">
           <ul id="list">
+            <li class="listitem">Saturnus har vackra ringar runt sig.</li>
             <li class="listitem">
-              Merkurius är den minsta planeten i solsystemet.
-            </li>
-            <li class="listitem">
-              Den snurrar runt solen jättesnabbt, så en dag på Merkurius är bara
-              59 jorddagar lång!
+              Dessa ringar är gjorda av miljarder små is- och stenbitar.
             </li>
           </ul>
         </div>
