--- a/jupiter.html
+++ b/jupiter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Merkurius</title>
+    <title>Jupiter</title>
     <link rel="stylesheet" href="/css/planetstyle.css" />
     <link rel="shortcut icon" href="#" />
   </head>
@@ -20,11 +20,11 @@
         <div class="text">
           <ul id="list">
             <li class="listitem">
-              Merkurius är den minsta planeten i solsystemet.
+              Jupiter är den största planeten i solsystemet.
             </li>
             <li class="listitem">
-              Den snurrar runt solen jättesnabbt, så en dag på Merkurius är bara
-              59 jorddagar lång!
+              Den har ett jättestort åskvädersmoln som kallas den "stora röda
+              fläcken".
             </li>
           </ul>
         </div>
