--- a/solen.html
+++ b/solen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Merkurius</title>
+    <title>Solen</title>
     <link rel="stylesheet" href="/css/planetstyle.css" />
     <link rel="shortcut icon" href="#" />
   </head>
@@ -20,11 +20,11 @@
         <div class="text">
           <ul id="list">
             <li class="listitem">
-              Merkurius är den minsta planeten i solsystemet.
+              Solen är vår stjärna och ger oss ljus och värme.
             </li>
             <li class="listitem">
-              Den snurrar runt solen jättesnabbt, så en dag på Merkurius är bara
-              59 jorddagar lång!
+              Den är så stor att över en miljon jordklot skulle få plats inuti
+              den!
             </li>
           </ul>
         </div>
