--- a/uranus.html
+++ b/uranus.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Uranus</title>
-    <link rel="stylesheet" href="/css/planetstyle.css" />
+    <link rel="stylesheet" href="css/planetstyle.css" />
     <link rel="shortcut icon" href="#" />
   </head>
   <body>
@@ -33,6 +33,6 @@
         <p>Skapat som ett skolprojekt vt-2023</p>
       </div>
     </div>
-    <script src="/js/planeter.js"></script>
+    <script src="js/planeter.js"></script>
   </body>
 </html>
