--- a/html/neptunus.html
+++ b/html/neptunus.html
@@ -11,7 +11,7 @@
   <body>
     <div class="wrapper">
       <div class="header" id="header">
-        <a href="index.html">
+        <a href="../index.html">
           <h1>&#60;&#60; Start</h1>
         </a>
       </div>
